--- a/miniChallenge/Base.lproj/Main.storyboard
+++ b/miniChallenge/Base.lproj/Main.storyboard
@@ -21,52 +21,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="75D-aW-781">
-                                <rect key="frame" x="213" y="72" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="75D-aW-781">
+                                <rect key="frame" x="239" y="44" width="189.5" height="168"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BB-mW-CPw">
-                                <rect key="frame" x="286" y="262" width="95" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Leaderboards"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBV-ig-y3l">
-                                <rect key="frame" x="310" y="291" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Config"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBV-ig-y3l">
+                                <rect key="frame" x="242" y="307" width="182.5" height="49"/>
+                                <state key="normal" image="settings"/>
                                 <connections>
-                                    <segue destination="0P5-6s-CiY" kind="show" id="2lb-8E-lMP"/>
+                                    <segue destination="0P5-6s-CiY" kind="show" id="6Tn-Ki-J5P"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HK3-Fl-Yoi">
-                                <rect key="frame" x="299" y="316" width="68" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="FAcebook"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyx-Ix-VwP">
-                                <rect key="frame" x="299" y="232" width="69" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyx-Ix-VwP">
+                                <rect key="frame" x="242" y="248" width="182.5" height="49"/>
+                                <state key="normal" image="play"/>
                                 <connections>
                                     <action selector="startGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sel-Un-5WT"/>
                                     <segue destination="IvQ-Sw-uge" kind="show" id="rbC-ij-VPi"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYv-Ao-0d2">
-                                <rect key="frame" x="20" y="20" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="toggleMusic:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SJK-Bs-mOt"/>
-                                </connections>
-                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.051166571680000002" green="0.2253625095" blue="0.33759492639999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UBV-ig-y3l" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="242" id="7GB-11-BCF"/>
+                            <constraint firstAttribute="trailing" secondItem="UBV-ig-y3l" secondAttribute="trailing" constant="242.69999999999999" id="KSA-gV-jo3"/>
+                            <constraint firstItem="75D-aW-781" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="24" id="KSh-sT-P6n"/>
+                            <constraint firstAttribute="trailing" secondItem="75D-aW-781" secondAttribute="trailing" constant="238.69999999999999" id="L2g-n2-VmG"/>
+                            <constraint firstItem="lyx-Ix-VwP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="242" id="Phh-Km-KL0"/>
+                            <constraint firstItem="75D-aW-781" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="239" id="ZYi-sp-Aof"/>
+                            <constraint firstAttribute="trailing" secondItem="lyx-Ix-VwP" secondAttribute="trailing" constant="242.69999999999999" id="hJq-d0-N5b"/>
+                            <constraint firstItem="lyx-Ix-VwP" firstAttribute="top" secondItem="75D-aW-781" secondAttribute="bottom" constant="36" id="hlJ-S9-pf9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UBV-ig-y3l" secondAttribute="bottom" constant="19" id="mvY-Ls-z2Q"/>
+                            <constraint firstItem="UBV-ig-y3l" firstAttribute="top" secondItem="lyx-Ix-VwP" secondAttribute="bottom" constant="10" id="v24-ri-uhc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9To-E1-Jfd"/>
                     <connections>
-                        <outlet property="facebookButton" destination="HK3-Fl-Yoi" id="IqH-vE-lgr"/>
-                        <outlet property="leaderButton" destination="4BB-mW-CPw" id="iGE-96-hdM"/>
+                        <outlet property="settingsButton" destination="UBV-ig-y3l" id="Qb9-Ve-wXO"/>
                         <outlet property="startButton" destination="lyx-Ix-VwP" id="8KS-oT-dmw"/>
                         <outlet property="titleImage" destination="75D-aW-781" id="AJq-PO-v7O"/>
                     </connections>
@@ -75,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="905.3973013493254" y="135.19999999999999"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="sPf-7A-FAP">
             <objects>
-                <viewController id="0P5-6s-CiY" sceneMemberID="viewController">
+                <viewController id="0P5-6s-CiY" customClass="SettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CMr-ah-qId"/>
                         <viewControllerLayoutGuide type="bottom" id="She-pE-ucq"/>
@@ -86,7 +76,39 @@
                     <view key="view" contentMode="scaleToFill" id="J3u-Oy-RR8">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qfb-mk-7BY">
+                                <rect key="frame" x="242" y="282" width="182" height="49"/>
+                                <state key="normal" image="doneButton"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="rAQ-Xs-hjx"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settingsTitle" translatesAutoresizingMaskIntoConstraints="NO" id="pcV-kg-TJf">
+                                <rect key="frame" x="234" y="58" width="199.5" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="nBc-MA-U1i"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAs-Se-YS0">
+                                <rect key="frame" x="302" y="162" width="63" height="50"/>
+                                <state key="normal" image="soundIcon"/>
+                                <connections>
+                                    <action selector="toggleMusic:" destination="0P5-6s-CiY" eventType="touchUpInside" id="mzi-KF-7sr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.051166571680000002" green="0.2253625095" blue="0.33759492639999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="pcV-kg-TJf" firstAttribute="leading" secondItem="J3u-Oy-RR8" secondAttribute="leading" constant="234" id="71o-Pe-Vzy"/>
+                            <constraint firstItem="pcV-kg-TJf" firstAttribute="top" secondItem="CMr-ah-qId" secondAttribute="bottom" constant="38" id="IMq-hU-Ogx"/>
+                            <constraint firstItem="qfb-mk-7BY" firstAttribute="top" secondItem="pAs-Se-YS0" secondAttribute="bottom" constant="70" id="IdV-IH-aGU"/>
+                            <constraint firstAttribute="trailing" secondItem="pcV-kg-TJf" secondAttribute="trailing" constant="233.69999999999999" id="MXp-ob-y65"/>
+                            <constraint firstItem="qfb-mk-7BY" firstAttribute="leading" secondItem="J3u-Oy-RR8" secondAttribute="leading" constant="242" id="RdP-Nb-a8M"/>
+                            <constraint firstAttribute="trailing" secondItem="qfb-mk-7BY" secondAttribute="trailing" constant="242.69999999999999" id="Yb4-gN-Rav"/>
+                            <constraint firstAttribute="trailing" secondItem="pAs-Se-YS0" secondAttribute="trailing" constant="302" id="dIF-9V-7j9"/>
+                            <constraint firstItem="She-pE-ucq" firstAttribute="top" secondItem="qfb-mk-7BY" secondAttribute="bottom" constant="44" id="fJR-Cf-zZ9"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="seS-4E-gCl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -214,6 +236,15 @@
     </scenes>
     <resources>
         <image name="characterSelection" width="423" height="43"/>
+        <image name="doneButton" width="181" height="49"/>
         <image name="fill2" width="182" height="49"/>
+        <image name="logo" width="188" height="188"/>
+        <image name="play" width="181" height="49"/>
+        <image name="settings" width="181" height="49"/>
+        <image name="settingsTitle" width="198" height="44"/>
+        <image name="soundIcon" width="63" height="50"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="rAQ-Xs-hjx"/>
+    </inferredMetricsTieBreakers>
 </document>
